--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
         {% if site.github.is_project_page %}
           <span class="site-footer-owner"><a href="{{ site.github.repository_url }}">{{ site.github.repository_name }}</a> is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a>.</span>
         {% endif %}
-        <span class="site-footer-credits">Copyright ©2017 All Rights Reserved.Powered by <a href="https://millerkevin.github.io/">MillerKevin</a>.</span>
+        <span class="site-footer-credits">Copyright ©2017 Powered by <a href="https://millerkevin.github.io/">MillerKevin</a>.</span>
       </footer>
     </section>
 
