--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,23 +18,12 @@
       {{ content }}
 
       <footer class="site-footer">
-        {% if site.github.is_project_page %}
+        <!-- {% if site.github.is_project_page %}
           <span class="site-footer-owner"><a href="{{ site.github.repository_url }}">{{ site.github.repository_name }}</a> is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a>.</span>
-        {% endif %}
+        {% endif %} 
+          -->
         <span class="site-footer-credits">Copyright ©2017 Powered by <a href="https://millerkevin.github.io/">MillerKevin</a>.</span>
       </footer>
     </section>
-
-<!--     {% if site.google_analytics %}
-      <script type="text/javascript">
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-        ga('create', '{{ site.google_analytics }}', 'auto');
-        ga('send', 'pageview');
-      </script>
-    {% endif %} -->
   </body>
 </html>
